# ICAL_knowledge

./: README.md
ICAL_Basic_Tutorial/: 01-Linux-terminal.md  04-gcc.md  05-ssh.md  06-sftp.md  README.md  apt.md  label.md  vim.md
ICAL_Basic_Tutorial/hello/: hello.c
basic_tutorial/: CMakeLists.txt  ch1_meow.cpp  ch2_opencv.cpp  ch3_cpp_basic.cpp  ch4_cpp_intermediate.cpp  ch5_cpp_hard.cpp  ch6_kmeans.cpp  readme.md  test.cpp
basic_tutorial/kmeans/: CMakeLists.txt  kmeans.cpp  kmeans.hpp
cmake_demo/: README.MD
cmake_demo/basic_exe/: CMakeLists.txt  foo.h
cmake_demo/basic_lib/: CMakeLists.txt
cmake_demo/basic_lib_with_exe/: CMakeLists.txt  foo.c  main.c
cmake_demo/csharp/: CMakeLists.txt
cmake_demo/csharp/lib/: CMakeLists.txt  foo.cs
cmake_demo/csharp/test/: CMakeLists.txt  test_another_foo.cs  test_foo.cs
cmake_demo/exe_set/: CMakeLists.txt  bar.c  foo.c  hello.c
cmake_demo/exe_with_deps/: CMakeLists.txt  main.cpp
cmake_demo/exe_with_file_op/: CMakeLists.txt  bar.c  foo.h  main.c
cmake_demo/hierarchical/: CMakeLists.txt
cmake_demo/hierarchical/lib/: CMakeLists.txt  foo.c  foo.h
cmake_demo/hierarchical/test/: CMakeLists.txt  test_another_foo.c  test_foo.c
cmake_practice/cmake_command/: README.md  complicated_variable.cmake  function.cmake  hello.cmake  if_else.cmake  math.cmake  string.cmake  variable.cmake  while.cmake
cmake_practice/ex1/: README.md
cmake_practice/ex1/hello/: CMakeLists.txt  hello.c
cmake_practice/ex1/image/: image.cpp
cmake_practice/ex1/make_hello/: hello.c  hello.h  hello_2.c  hello_2.h  hello_3.c  hello_3.h  main.c  makefile
cmake_practice/ex1/thanks/: thanks.c  thanks_2.c  thanks_2.h
cmake_practice/ex2/: README.md
cmake_practice/ex2/src/: CMakeLists.txt  calc.h  main.cpp
cmake_practice/ex3/: CMakeLists.txt  README.md
cmake_practice/ex3/lib/: CMakeLists.txt  calc.h
cmake_practice/ex3/test/: CMakeLists.txt
cmake_practice/ex4/: CMakeLists.txt
cmake_practice/ex4/cmake/: lib.cmake
cmake_practice/ex4/lib/: CMakeLists.txt  calc.cpp
cmake_practice/ex4/test/: CMakeLists.txt
cmake_practice/ex5/cmake_test/: CMakeLists.txt  README.md
cmake_practice/ex5/cmake_test/cmake/: FindFuzzylite.cmake  FindSerialport.cmake  deps.cmake
cmake_practice/ex5/cmake_test/lib/: CMakeLists.txt  debug.h
cmake_practice/ex5/cmake_test/lib/calc/: CMakeLists.txt  calc.cpp  calc.h
cmake_practice/ex5/cmake_test/test/: CMakeLists.txt  test_calc.cpp  test_serial.cpp
cmake_practice/ex5/cmake_test/util/util1/: main.c
cmake_template/: CMakeLists.txt
cmake_template/cmake/: FindSerialport.cmake  deps.cmake  lib.cmake  util.cmake
cmake_template/lib/: demo.h  demo_c.c  demo_cpp.cpp
cmake_template/test/: CMakeLists.txt  test_demo.cpp  test_deps1.c  test_deps2.c
cmake_template/util/util1/: CMakeLists.txt
cmake_template/util/util2/: CMakeLists.txt  main.cpp
