cmake_minimum_required(VERSION 2.8)

# Set variables
set(PROJECT_NAME foo)
set(PROJECT_LANGUAGE C)
set(PROJECT_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/foo.h)

# Set project
project(${PROJECT_NAME} ${PROJECT_LANGUAGE})

# Set file list
file(GLOB PROJECT_SRCS
	${CMAKE_CURRENT_SOURCE_DIR}/*.c
	)

# Compile library
add_library(foo STATIC ${PROJECT_SRCS})
set_target_properties(${PROJECT_NAME}
	PROPERTIES
	OUTPUT_NAME			${PROJECT_NAME}
		PREFIX			"lib"
	)

# Install library
install(TARGETS ${PROJECT_NAME}
	RUNTIME DESTINATION "${CMAKE_INSTALL_PREFIX}/bin"
	ARCHIVE DESTINATION "${CMAKE_INSTALL_PREFIX}/lib"
	LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/lib"
	PUBLIC_HEADER DESTINATION "${CMAKE_INSTALL_PREFIX}/include"
	)
install(FILES ${PROJECT_HEADERS}
	DESTINATION "${CMAKE_INSTALL_PREFIX}/include"
	)